# conversadigital

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
artigos/: index.html
artigos/conversa001-melhore-seus-textos/: index.html
artigos/conversa002-chatgpt-auditoria/: index.html
artigos/conversa003-prompts-eficientes/: index.html
artigos/conversa004-prompt-gerador-de-prompt/: index.html
artigos/conversa005-carga-de-dados-de-emendas-portal/: index.html
conversa001-melhore-seus-textos/: index.html
conversa002-chatgpt-auditoria/: index.html
conversa003-prompts-eficientes/: index.html
conversa004-prompt-gerador-de-prompt/: index.html
conversa005-carga-de-dados-de-emendas-portal/: index.html
docs/: conversa001-melhore-seus-textos.md  conversa002-chatgpt-auditoria.md  conversa003-prompts-eficientes.md  conversa005-carga-de-dados-de-emendas-portal.md  index.md
docs/artigos/: conversa001-melhore-seus-textos.md  conversa002-chatgpt-auditoria.md  conversa004-prompt-gerador-de-prompt.md  conversa005-carga-de-dados-de-emendas-portal.md  index.md
search/: search_index.json
